remove usage of jsonrapper in azure-search, move jsonwrapper under implementation