@@ -137,8 +137,6 @@
             <configuration>
               <argLine>
                 --add-exports com.azure.core/com.azure.core.implementation.http=ALL-UNNAMED
-                --add-exports com.azure.core/com.azure.core.util.serializer.jsonwrapper.jacksonwrapper.JacksonDeserializer=ALL-UNNAMED
-                --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
                 --add-opens com.azure.search/com.azure.search=ALL-UNNAMED
                 --add-opens com.azure.search/com.azure.search.models=ALL-UNNAMED
                 --add-opens com.azure.search/com.azure.search.implementation=ALL-UNNAMED
